# cnftools

./: .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.org  cnf.cc  cnf.hh  cnfto3cnf.cc  cnftools.cc  cnftools.hh  dimacs_io.cc  dimacs_io.hh  prova.cnf  reader.cc  testbasic.cc  testbasic.hh  testcnf2kcnf.cc  testcnf2kcnf.hh  testcode.cc  testparser.cc  testparser.hh
